--- a/index.html
+++ b/index.html
@@ -99,23 +99,26 @@
 
       <div class="skills__container bd-grid">
         <div class="skills__box">
-          <h3 class="skills__subtitle">Technology</h3>
+          <h3 class="skills__subtitle">FRONTEND</h3>
           <span class="skills__name">Html</span>
           <span class="skills__name">Css</span>
           <span class="skills__name">Javascript</span>
-          <span class="skills__name">Scss</span>
-          <span class="skills__name">Node</span>
           <span class="skills__name">React</span>
-          <span class="skills__name">Database</span>
-          <span class="skills__name">Git</span>
+          <span class="skills__name">Bootstrap</span>
+
+          <h3 class="skills__subtitle">BACKEND</h3>
           <span class="skills__name">Python</span>
-          <span class="skills__name">Docker</span>
+          <span class="skills__name">Django</span>
+          <span class="skills__name">Git</span>
+          <span class="skills__name">Server</span>
+          <span class="skills__name">ApiRest</span>
 
-
-          <h3 class="skills__subtitle">Design</h3>
+          <h3 class="skills__subtitle">SPECIFIC</h3>
           <span class="skills__name">Adobe</span>
           <span class="skills__name">Photoshop</span>
-          <span class="skills__name">Bootstrap</span>
+          <span class="skills__name">Database</span>
+          <span class="skills__name">Docker</span>
+          <span class="skills__name">Cloud Software Deployment</span>
         </div>
         <div class="skills__img">
           <img loading="lazy" src="/funtion/img2/2.jpeg" alt="">
