--- a/my-cv/index.html
+++ b/my-cv/index.html
@@ -306,7 +306,7 @@
                         <h2 class="section-title">SKILLS</h2>
 
                         <div class="skills__content bd-grid">
-                            <ul class="skills__data">Frontend
+                            <ul class="skills__data"><h3>FRONTEND</h3>
                                 <li class="skills__name">
                                     <span class="skills__circle"></span>Html
                                 </li>
@@ -321,34 +321,33 @@
                                 </li>
                             </ul>
 
-
-                            <ul class="skills__data">Backend
+                            <ul class="skills__data"><h3>BACKEND</h3>
                                 <li class="skills__name">
-                                    <span class="skills__circle"></span>React
+                                    <span class="skills__circle"></span>Phyton
                                 </li>
                                 <li class="skills__name">
-                                    <span class="skills__circle"></span>Python
+                                    <span class="skills__circle"></span>Jango
                                 </li>
                                 <li class="skills__name">
-                                    <span class="skills__circle"></span>Database
+                                    <span class="skills__circle"></span>Servers
                                 </li>
                                 <li class="skills__name">
                                     <span class="skills__circle"></span>Git
                                 </li>
                             </ul>
 
-                            <ul class="skills__data">Specific
+                            <ul class="skills__data"><h3>SPECIFIC</h3>
                                 <li class="skills__name">
-                                    <span class="skills__circle"></span>Git
+                                    <span class="skills__circle"></span>ApiRest
                                 </li>
                                 <li class="skills__name">
-                                    <span class="skills__circle"></span>Git
+                                    <span class="skills__circle"></span>Seo
                                 </li>
                                 <li class="skills__name">
-                                    <span class="skills__circle"></span>Git
+                                    <span class="skills__circle"></span>Docker
                                 </li>
                                 <li class="skills__name">
-                                    <span class="skills__circle"></span>Git
+                                    <span class="skills__circle"></span>Databace
                                 </li>
                             </ul>
                         </div>   
