--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
 
       <div class="footer__data">
         <h2 class="footer__title">FOLLOW</h2>
-        <a href="#" class="footer__social"><i class="bx bxl-facebook bx-tada bx-md" style="color:#0c50ef"></i></a>
+        <a href="https://www.facebook.com/TOLSER14" class="footer__social"><i class="bx bxl-facebook bx-tada bx-md" style="color:#0c50ef"></i></a>
         <a href="#" class="footer__social"><i class="bx bxl-instagram bx-tada bx-md" style="color:#fb850d"></i></a>
-        <a href="#" class="footer__social"><i class="bx bxl-twitter bx-tada bx-md" style="color:#10a7e2"></i></a>
+        <a href="https://mobile.twitter.com/codetolser" class="footer__social"><i class="bx bxl-twitter bx-tada bx-md" style="color:#10a7e2"></i></a>
       </div>
 
     </div>
