--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
           <h3 class="skills__subtitle">SPECIFIC</h3>
           <span class="skills__name">Adobe</span>
           <span class="skills__name">Photoshop</span>
+          <span class="skills__name">Microservices</span>
           <span class="skills__name">Database</span>
           <span class="skills__name">Docker</span>
           <span class="skills__name">Cloud Software Deployment</span>
