--- a/my-cv/index.html
+++ b/my-cv/index.html
@@ -341,7 +341,7 @@
                                     <span class="skills__circle"></span>ApiRest
                                 </li>
                                 <li class="skills__name">
-                                    <span class="skills__circle"></span>Seo
+                                    <span class="skills__circle"></span>Microservices
                                 </li>
                                 <li class="skills__name">
                                     <span class="skills__circle"></span>Docker
