--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
         <div class="contact__social">
          <a href="https://www.linkedin.com/in/jacobo-tolentino-serrano-6bb0761b8" class="contact__social-icon"><i class='bx bxl-linkedin bx-tada bx-md ' style='color:#10a7e2'></i></a>
          <a href="https://github.com/Jacobo-88" class="contact__social-icon"><i class='bx bxl-github bx-spin bx-md' style='color:#110707'></i></a>
+         <a href="https://www.instagram.com/codetolser/" class="footer__social"><i class="bx bxl-instagram bx-tada bx-md" style="color:#fb850d"></i></a>
          <!--<a href="#" class="contact__social-icon"><i class='bx bxl-mailchimp bx-flashing bx-md ' style='color:#e7d509'></i></a>-->
          <a href="https://www.facebook.com/TOLSER14" class="contact__social-icon"><i class='bx bxl-facebook bx-burst bx-md ' style='color:#0c50ef'></i></a>
          <a href="https://www.youtube.com/channel/UCpNlxOkhRF3OAVLAx84WTwQ" class="contact__social-icon"><i class='bx bxl-youtube bx-fade-left bx-md ' style='color:#ed0909'></i></a>
@@ -213,7 +214,7 @@
       <div class="footer__data">
         <h2 class="footer__title">FOLLOW</h2>
         <a href="https://www.facebook.com/TOLSER14" class="footer__social"><i class="bx bxl-facebook bx-tada bx-md" style="color:#0c50ef"></i></a>
-        <a href="#" class="footer__social"><i class="bx bxl-instagram bx-tada bx-md" style="color:#fb850d"></i></a>
+        <a href="https://www.instagram.com/codetolser/" class="footer__social"><i class="bx bxl-instagram bx-tada bx-md" style="color:#fb850d"></i></a>
         <a href="https://mobile.twitter.com/codetolser" class="footer__social"><i class="bx bxl-twitter bx-tada bx-md" style="color:#10a7e2"></i></a>
       </div>
 
