--- a/my-cv/index.html
+++ b/my-cv/index.html
@@ -95,7 +95,7 @@
                     <section class="home" id="home">
                         <div class="home__container section bd-grid">
                             <div class="home__data bd-grid">
-                                <img loading="lazy" src="herram/img/Jacob 2.png" alt="" class="home__img">
+                                <img loading="lazy" src="herram/img/tol1.png" alt="" class="home__img">
 
 
                                 <h1 class="home__title">JACOBO <b>TOLENTINO</b></h1>
