--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
       <div class="about__container bd-grid">
         <div class="about__img">
-          <img loading="lazy" src="/funtion/img2/perf.png" alt="">
+          <img loading="lazy" src="/funtion/img2/ser2.png" alt="">
         </div>
 
         <div>
