--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
         <div>
           <h2 class="about__subtitle">I'am Jacobo Tolentino</h2>
           <span class="about__profession">Web Developer</span>
-          <p class="about__text">I am a very dedicated and passionate person with the desire to learn and demonstrate my skills that I would like to acquire throughout my professional growth and be able to solve the problems that were presented to me for the implemented solution that is provided to me and to be able to fulfill what was promised</p>
+          <p class="about__text">Hi, I'm Jacobo with knowledge of HTML, CSS, Javascript and Python.  Understanding of design principles, UI / UX and responsive design.  Knowledge of the web front-end in React.  Back-end experience with Node.js / Express, Python / Django, Auth, and RESTful API.  Management of relational and non-relational databases using MongoDB, PostgreSQL and Firebase.  DevOps experience with CI / CD pipelines, Docker, AWS services, and microservices architecture.  Positive attitude, strong work ethic, innovative thinking, and high level of professional integrity.</p>
         </div>
       </div>
     </section>
 
     <!-- botton -->
-    <section class="cv__button section" id="cv__button">
+    <section  id="cv__button">
     <a href="https://jacobo-88.github.io/my-cv/" class="cv__button">My CV</a>     
     </section>      
  
