--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div>
           <h2 class="about__subtitle">I'am Jacobo Tolentino</h2>
           <span class="about__profession">Web Developer</span>
-          <p class="about__text">Hi, I'm Jacobo with knowledge of HTML, CSS, Javascript and Python.  Understanding of design principles, UI / UX and responsive design.  Knowledge of the web front-end in React.  Back-end experience with Node.js / Express, Python / Django, Auth, and RESTful API.  Management of relational and non-relational databases using MongoDB, PostgreSQL and Firebase.  DevOps experience with CI / CD pipelines, Docker, AWS services, and microservices architecture.  Positive attitude, strong work ethic, innovative thinking, and high level of professional integrity.</p>
+          <p class="about__text">I am a person, professionally dedicated to my work to be able to bring my acquired knowledge to be able to apply and solve any problem presented in my growth, with extensive knowledge and gain experience for better work and professional performance.</p>
         </div>
       </div>
     </section>
@@ -129,7 +129,7 @@
 
     <!-- ===== portfolio ===== -->
     <section class="portfolio section" id="portfolio">
-      <h2 class="section-title">FREELANCE EXPERIENCE</h2>
+      <h2 class="section-title">PROJECTS</h2>
       <div class="portfolio__container bd-grid">
         <div class="portfolio__img">
           <img loading="lazy" src="funtion/img2/3.jpeg" alt="">
@@ -183,8 +183,8 @@
          <a href="https://www.facebook.com/TOLSER14" class="contact__social-icon"><i class='bx bxl-facebook bx-burst bx-md ' style='color:#0c50ef'></i></a>
          <a href="https://www.youtube.com/channel/UCpNlxOkhRF3OAVLAx84WTwQ" class="contact__social-icon"><i class='bx bxl-youtube bx-fade-left bx-md ' style='color:#ed0909'></i></a>
          <a href="https://mobile.twitter.com/codetolser" class="contact__social-icon"><i class='bx bxl-twitter bx-fade-right bx-md ' style='color:#10a7e2'></i></a>
-         <a href="#contact" class="contact__social-icon"><i class='bx bxl-whatsapp bx-fade-up bx-md ' style='color:#6edc25'></i></a>
-         <a href="#contact" class="contact__social-icon"><i class='bx bx-envelope-open bx-spin bx-md ' style='color:#ed0909'></i></a>
+         <!--<a href="#contact" class="contact__social-icon"><i class='bx bxl-whatsapp bx-fade-up bx-md ' style='color:#6edc25'></i></a>-->
+         <!--<a href="#contact" class="contact__social-icon"><i class='bx bx-envelope-open bx-spin bx-md ' style='color:#ed0909'></i></a>-->
         </div>
       </div>
     </section>
@@ -195,19 +195,19 @@
     <div class="footer__container bd-grid">
       <div class="footer__data">
         <h2 class="footer__title">Jacobo Tolentino</h2>
-        <a href="#" class="footer__social"><img src="funtion/img2/contacto.png" alt=""></a>
-        <p class="footer__text">Hi this is my personal website</p>
+        <!-- <a href="#" class="footer__social"><img src="funtion/img2/contacto.png" alt=""></a>-->
+        <p class="footer__text">This is my portfolio already concluded, we are at your disposal excellent day.</p>
       </div>
 
       <div class="footer__data">
         <h2 class="footer__title">EXPLORE</h2>
         <ul>
-          <li><a href="#home" class="footer__link">home</a></li>
-          <li><a href="#about" class="footer__link">about</a></li>
-          <li><a href="#cv__button" class="footer__link">cv</a></li>
-          <li><a href="#skills" class="footer__link">skills</a></li>
-          <li><a href="#portfolio" class="footer__link">portfolio</a></li>
-          <li><a href="#contact" class="footer__link">conrtact</a></li>
+          <li><a href="#home" class="footer__link">HOME</a></li>
+          <li><a href="#about" class="footer__link">ABOUT</a></li>
+          <li><a href="#cv__button" class="footer__link">CV</a></li>
+          <li><a href="#skills" class="footer__link">SKILLS</a></li>
+          <li><a href="#portfolio" class="footer__link">PROJECTS</a></li>
+          <li><a href="#contact" class="footer__link">CONTACT</a></li>
         </ul>
       </div>
 
