--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
-          <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
-          <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-          <li class="nav__item"><a href="#cv__button" class="nav__link">cv</a></li>
-          <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-          <li class="nav__item"><a href="#portfolio" class="nav__link">Portfolio</a></li>
-          <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>     
+          <li class="nav__item"><a href="#home" class="nav__link active">HOME</a></li>
+          <li class="nav__item"><a href="#about" class="nav__link">ABOUT</a></li>
+          <li class="nav__item"><a href="#cv__button" class="nav__link">CV</a></li>
+          <li class="nav__item"><a href="#skills" class="nav__link">SKILLS</a></li>
+          <li class="nav__item"><a href="#portfolio" class="nav__link">PORTFOLIO</a></li>
+          <li class="nav__item"><a href="#contact" class="nav__link">CONTACT</a></li>     
         </ul>
       </div>
 
@@ -73,7 +73,7 @@
     <!-- ===== ABOUT ===== -->
 
     <section class="about section" id="about">
-      <h2 class="section-title">About</h2>
+      <h2 class="section-title">ABOUT</h2>
 
       <div class="about__container bd-grid">
         <div class="about__img">
@@ -82,7 +82,7 @@
 
         <div>
           <h2 class="about__subtitle">I'am Jacobo Tolentino</h2>
-          <span class="about__profession">Web Developer</span>
+          <span class="about__profession">WEB DEVELOPER</span>
           <p class="about__text">I am a person, professionally dedicated to my work to be able to bring my acquired knowledge to be able to apply and solve any problem presented in my growth, with extensive knowledge and gain experience for better work and professional performance.</p>
         </div>
       </div>
@@ -95,7 +95,7 @@
  
     <!-- ===== SKILLS ===== -->
     <section class="skills section" id="skills">
-      <h2 class="section-title">Skills</h2>
+      <h2 class="section-title">SKILLS</h2>
 
       <div class="skills__container bd-grid">
         <div class="skills__box">
@@ -171,7 +171,7 @@
 
     <!-- ===== contact ===== -->
     <section class="contact section" id="contact">
-      <h2 class="section-title">Contact</h2>
+      <h2 class="section-title">CONTACT</h2>
        
       <h2 class="contact__subtitle">My contact social networks</h2>
       <div class="contact__container bd-grid">
@@ -194,7 +194,7 @@
   <footer class="footer section">
     <div class="footer__container bd-grid">
       <div class="footer__data">
-        <h2 class="footer__title">Jacobo Tolentino</h2>
+        <h2 class="footer__title">JACOBO TOLENTINO</h2>
         <!-- <a href="#" class="footer__social"><img src="funtion/img2/contacto.png" alt=""></a>-->
         <p class="footer__text">This is my portfolio already concluded, we are at your disposal excellent day.</p>
       </div>
