--- a/my-cv/index.html
+++ b/my-cv/index.html
@@ -231,8 +231,8 @@
 
 
                                <div class="experience__data bd-grid">
-                                   <h3 class="experience__title">INTERNSHIP IN WEB DEVELOPMENT FREELANCER</h3>
-                                   <span class="experience__conpany">From 2020 - 2021 | tech soft</span>
+                                   <h3 class="experience__title">Software startup</h3>
+                                   <span class="experience__conpany">From 2020 - 2021 | Web development front-end</span>
                                    <p class="experience__description">Carrying out practical projects in the development of pages, portfolios, games, etc.  For anyone who will request it by applying my skills.</p>
                                </div>
                            </div>
