--- a/my-cv/index.html
+++ b/my-cv/index.html
@@ -98,12 +98,12 @@
                                 <img loading="lazy" src="herram/img/tol1.png" alt="" class="home__img">
 
 
-                                <h1 class="home__title">JACOBO <b>TOLENTINO</b></h1>
-                                <h3 class="home__profession">Web Developer</h3>
+                                <h1 class="home__title">JACOBO <b>TOLENTINO SERRANO</b></h1>
+                                <h3 class="home__profession">WEB DEVELOPER</h3>
 
                                 <!-- Button to download your CV -->
                                 <div>
-                                    <a download="" href="herram/pdf/myResume.pdf" class="home__button-movil">Download</a>
+                                    <a download="" href="herram/pdf/MyCvEsp2.pdf" class="home__button-movil">Download</a>
                                 </div>
                             </div>
 
@@ -133,21 +133,26 @@
 
                         <div class="social__container bd-grid">
                             <a href="https://www.linkedin.com/mwlite/in/jacobo-tolentino-serrano-6bb0761b8" target="_blank" class="social__link">
-                                <i class='bx bxl-linkedin-square social__icon'></i> LINKEDIN
+                                <i class='bx bxl-linkedin-square social__icon'></i>  LINKEDIN
                             </a>
                             <a href="https://www.facebook.com/TOLSER14" target="_blank" class="social__link">
-                                <i class='bx bxl-facebook social__icon'></i> FACEBOOK
+                                <i class='bx bxl-facebook social__icon'></i>  FACEBOOK
                             </a>
                             <a href="https://mobile.twitter.com/codetolser" target="_blank" class="social__link">
-                                <i class='bx bxl-twitter social__icon'></i> @CodeTolser
+                                <i class='bx bxl-twitter social__icon'></i>  @CodeTolser
+                            </a>
+                            <a href="https://github.com/Jacobo-88" target="_blank" class="social__link">
+                                <i class='bx bxl-github'></i>  GITHUP
+                            </a>
+                            <a href="https://www.instagram.com/codetolser/" target="_blank" class="social__link">
+                                <i class='bx bxl-instagram'></i>  INSTAGRAM
                             </a>
                         </div>
                     </section>
                     <!--========== PROFILE ==========-->
                     <section class="profile section" id="profile">
                        <h2 class="section-title">PROFILE</h2>
-                       <p class="profile__description">I am a person, professionally dedicated to my work to be able to bring my acquired knowledge to be able to apply and solve any problem presented in my growth, with extensive knowledge and gain experience for better work and professional performance.</p>
-                    </section>
+                       <p class="profile__description">I am a web developer for more than 1 year, I have experience in the Frontend and Backend area, implementing different technologies in the development and production of different projects.</p> </section>
                     <!--========== EDUCATION ==========-->
                     <section class="education section" id="education">
                         <h2 class="section-title">EDUCATION</h2>
@@ -162,8 +167,8 @@
 
 
                                 <div class="education__data bd-grid">
-                                    <h3 class="education__title">WEB DEVELOPMENT COURSE</h3>
-                                    <span class="education__studies">Online courses completed</span>
+                                    <h3 class="education__title">FULL STACK WEB DEVELOPMENT COURSE AT UDEMY.</h3>
+                                    <span class="education__studies">Using frontend and backend technologies.</span>
                                     <span class="education__year">2020 - 2021</span>
                                 </div>
                             </div>
@@ -177,8 +182,8 @@
 
 
                                 <div class="education__data bd-grid">
-                                    <h3 class="education__title">WEB DEVELOPER</h3>
-                                    <span class="education__studies">Online courses completed</span>
+                                    <h3 class="education__title">COURSE IN UDEMY OF WEB APPLICATIONS.</h3>
+                                    <span class="education__studies">Deployment of web, desktop and mobile applications</span>
                                     <span class="education__year">2020 - 2021</span>
                                 </div>
                             </div>
@@ -192,8 +197,8 @@
 
 
                                 <div class="education__data bd-grid">
-                                    <h3 class="education__title">UI/UX</h3>
-                                    <span class="education__studies">Online courses completed</span>
+                                    <h3 class="education__title">DEVOPS COURSE AT UDEMY</h3>
+                                    <span class="education__studies">Completed</span>
                                     <span class="education__year">2020 - 2021</span>
                                 </div>
                             </div>
@@ -201,19 +206,19 @@
                     </section>
                     <!--========== References  ==========-->
                     <section class="references section" id="references">
-                        <h2 class="section-title">REFERENCES</h2>
+                        <h2 class="section-title">MORE REFERENCES</h2>
                         <div class="references__container bd-grid">
-                            <div class="references__content">
+                             <!--<div class="references__content">
                                 <div class="references__time">
                                     <span class="references__rounder"></span>
-                                    <!--     <span class="references__line"></span>-->
+                                    <!--     <span class="references__line"></span>--
                                 </div>
                                 <div class="references__data bd-grid">
                                     <h3 class="references__title">Carlos P. School Principal</h3>
                                     <span class="references__studies">Phone : 5551802180</span>
-                                    <span class="references__year">Email: user@email.com</span> 
+                                 <!--   <span class="references__year"></span> --
                                 </div>
-                            </div>
+                             </div>-->
                         </div>
                     </section>       
                 </div>
@@ -255,9 +260,9 @@
                                </div>
 
                                 <div>
-                                    <h3 class="experience__title">MY PORTFOLIO</h3>
+                                    <h3 class="experience__title">FOR MORE REFERENCE MY PORTFOLIO</h3>
                                     <span class="experience__conpany">From 2020 - 2021 | tech soft</span>
-                                    <p class="experience__description">You can check my skills in the link https://jacobo-88.github.io/</p>
+                                    <p class="experience__description">If you want to know more about my visit my portfolio to the following address https://jacobo-88.github.io/</p>
                                 </div>
                            </div>
                        </div>
