--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
         <div>
           <h2 class="about__subtitle">I'am Jacobo Tolentino</h2>
           <span class="about__profession">WEB DEVELOPER</span>
-          <p class="about__text">I am a person, professionally dedicated to my work to be able to bring my acquired knowledge to be able to apply and solve any problem presented in my growth, with extensive knowledge and gain experience for better work and professional performance.</p>
+          <p class="about__text">Hi, I'm a web developer doing different projects such as page restoration, maintenance of applications with HTML, CSS and JavaScript with Framework with Reactjs Redux MobX, package manager with npm and yarn.  consuming and cresasion of Apis raising of relational and non-relational SQL databases like Mongodb.
+ I follow different development methods.  Development of Apache and Nginx AWS servers and heroku. Used docker and orchestrator as kubernetes for the administration of web applications using the Linux operating system and working script with Python.
+ Applying architecture patterns such as microservices and SOA or Serveless.</p>
         </div>
       </div>
     </section>
